Finished most mobile optimization, still need to fix image overflow

--- a/src/css/getInvolved.css
+++ b/src/css/getInvolved.css
@@ -54,8 +54,8 @@ body {
 
 .clientbox {
   /* position: absolute;*/
-  width: 31rem;
-  height: 21rem;
+  width: 35rem;
+  height: 25rem;
   /*left: 200px;
   top: 768px; */
   background: #ffffff;
@@ -98,6 +98,22 @@ body {
 
   color: #000000;
 }
+
+@media (max-width: 768px) {
+  .clientbox {
+    /* position: absolute;*/
+    width: 23rem;
+    height: 23rem;
+    /*left: 200px;
+    top: 768px; */
+    background: #ffffff;
+    /* Drop Shadow */
+
+    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+}
+
 li {
   margin-left: 25px;
 }
@@ -119,8 +135,8 @@ li {
 
 .mentorbox {
   /* position: absolute;*/
-  width: 31rem;
-  height: 21rem;
+  width: 35rem;
+  height: 25rem;
   /* left: 730px;
   top: 768px; */
   background: #ffffff;
@@ -179,6 +195,21 @@ li {
   color: #000000;
 }
 
+@media (max-width: 768px) {
+  .mentorbox {
+    /* position: absolute;*/
+    width: 23rem;
+    height: 23rem;
+    /*left: 200px;
+    top: 768px; */
+    background: #ffffff;
+    /* Drop Shadow */
+
+    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+}
+
 .quarterheader {
   /* position: absolute;*/
   /* width: 1034px;
@@ -211,13 +242,35 @@ li {
   color: #000000;
 }
 
+.meetings {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+
+  color: #000000;
+}
+
 .qtrimagespace {
   /*position: absolute;*/
   margin-top: 10rem;
-  width: 494px;
-  height: 323px;
+  width: 100%;
+  height: auto;
   /* left: 803px;
   top: 1299px; */
+}
+
+@media (max-width: 768px) {
+  .qtrimagespace {
+    /*position: absolute;*/
+    margin-top: 2rem;
+    width: 100%;
+    height: auto;
+    margin-bottom: 3rem;
+    /* left: 803px;
+    top: 1299px; */
+  }
 }
 
 .faqheader {
@@ -232,7 +285,7 @@ li {
 }
 
 .faqsubheader {
-  padding-top: 30px;
+  padding-top: 10px;
   font-family: Poppins;
   font-style: normal;
   font-weight: bold;
@@ -274,6 +327,20 @@ li {
   line-height: 36px;
 
   color: #000000;
+}
+
+@media (max-width: 768px) {
+  .applytext {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 36px;
+
+    color: #000000;
+  }
 }
 
 .applyButton {
